// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListField - Collaborators renders a list of item members and an autocomplete input 1`] = `
<div>
  <div
    name="collaborators"
    tabindex="-1"
  >
    <div
      class="staff-list container"
      data-rbd-droppable-context-id="0"
      data-rbd-droppable-id="CollaboratorList"
    >
      <div
        aria-describedby="rbd-hidden-text-0-hidden-text-0"
        class="staffer-wrapper col-12 my-2"
        data-rbd-drag-handle-context-id="0"
        data-rbd-drag-handle-draggable-id="6f23f2f8-10dd-454a-8497-2ba972c980c4"
        data-rbd-draggable-context-id="0"
        data-rbd-draggable-id="6f23f2f8-10dd-454a-8497-2ba972c980c4"
        data-testid="draggable-list-item"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="staffer-image-wrapper overflow-hidden"
        >
          <img
            alt=""
            class="w-25"
            src="/assets/new-80.png"
          />
        </div>
        <div
          class="staffer-details"
        >
          <button
            class="btn js-delete-btn mr-1 p-0"
            type="button"
          >
            <span
              aria-hidden="true"
              class="fa fa-trash fa-fw text-danger"
              id="delete-icon-6f23f2f8-10dd-454a-8497-2ba972c980c4"
            />
            <span
              class="sr-only"
            >
              Remove Waseda
            </span>
          </button>
          <a
            class="btn mr-1 p-0"
            href="/collaborators/6f23f2f8-10dd-454a-8497-2ba972c980c4"
          >
            <span
              aria-hidden="true"
              class="fa fa-edit fa-fw"
              id="edit-icon-6f23f2f8-10dd-454a-8497-2ba972c980c4"
            />
            <span
              class="sr-only"
            >
              Edit Waseda
            </span>
          </a>
          <span
            class="name font-weight-bold"
          >
            Waseda
          </span>
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-0-hidden-text-0"
        class="staffer-wrapper col-12 my-2"
        data-rbd-drag-handle-context-id="0"
        data-rbd-drag-handle-draggable-id="17d0e2c0-9a02-421b-93bf-d081339090cc"
        data-rbd-draggable-context-id="0"
        data-rbd-draggable-id="17d0e2c0-9a02-421b-93bf-d081339090cc"
        data-testid="draggable-list-item"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="staffer-image-wrapper overflow-hidden"
        >
          <img
            alt=""
            class="w-25"
            src="/assets/new-80.png"
          />
        </div>
        <div
          class="staffer-details"
        >
          <button
            class="btn js-delete-btn mr-1 p-0"
            type="button"
          >
            <span
              aria-hidden="true"
              class="fa fa-trash fa-fw text-danger"
              id="delete-icon-17d0e2c0-9a02-421b-93bf-d081339090cc"
            />
            <span
              class="sr-only"
            >
              Remove IBM
            </span>
          </button>
          <a
            class="btn mr-1 p-0"
            href="/collaborators/17d0e2c0-9a02-421b-93bf-d081339090cc"
          >
            <span
              aria-hidden="true"
              class="fa fa-edit fa-fw"
              id="edit-icon-17d0e2c0-9a02-421b-93bf-d081339090cc"
            />
            <span
              class="sr-only"
            >
              Edit IBM
            </span>
          </a>
          <span
            class="name font-weight-bold"
          >
            IBM
          </span>
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-0-hidden-text-0"
        class="staffer-wrapper col-12 my-2"
        data-rbd-drag-handle-context-id="0"
        data-rbd-drag-handle-draggable-id="2aba6189-ad7e-45a8-b269-bea071b80391"
        data-rbd-draggable-context-id="0"
        data-rbd-draggable-id="2aba6189-ad7e-45a8-b269-bea071b80391"
        data-testid="draggable-list-item"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="staffer-image-wrapper overflow-hidden"
        >
          <img
            alt=""
            class="w-25"
            src="/assets/new-80.png"
          />
        </div>
        <div
          class="staffer-details"
        >
          <button
            class="btn js-delete-btn mr-1 p-0"
            type="button"
          >
            <span
              aria-hidden="true"
              class="fa fa-trash fa-fw text-danger"
              id="delete-icon-2aba6189-ad7e-45a8-b269-bea071b80391"
            />
            <span
              class="sr-only"
            >
              Remove Wellesley
            </span>
          </button>
          <a
            class="btn mr-1 p-0"
            href="/collaborators/2aba6189-ad7e-45a8-b269-bea071b80391"
          >
            <span
              aria-hidden="true"
              class="fa fa-edit fa-fw"
              id="edit-icon-2aba6189-ad7e-45a8-b269-bea071b80391"
            />
            <span
              class="sr-only"
            >
              Edit Wellesley
            </span>
          </a>
          <span
            class="name font-weight-bold"
          >
            Wellesley
          </span>
        </div>
      </div>
    </div>
    <label
      class="w-100"
      for="Collaborator-search"
      id="label-Collaborator-search"
    >
      <strong>
        Search or add new Collaborator:
      </strong>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="react-autowhatever-Collaborator-search"
        class="react-autosuggest__container position-relative"
        role="combobox"
      >
        <input
          aria-autocomplete="list"
          aria-controls="react-autowhatever-Collaborator-search"
          autocomplete="off"
          class="form-control"
          placeholder=""
          type="text"
          value=""
        />
        <div
          id="react-autowhatever-Collaborator-search"
          role="listbox"
        />
      </div>
    </label>
  </div>
</div>
`;

exports[`ListField - Collaborators renders correctly with an error after failed submission 1`] = `
<div>
  <div
    name="collaborators"
    tabindex="-1"
  >
    <div
      class="fade alert-content alert alert-danger show"
      role="alert"
    >
      <div
        class="pgn__alert-message-wrapper"
      >
        <div
          class="alert-message-content"
        >
          This field is required
        </div>
      </div>
    </div>
    <div
      class="staff-list container"
      data-rbd-droppable-context-id="2"
      data-rbd-droppable-id="CollaboratorList"
    >
      <div
        aria-describedby="rbd-hidden-text-2-hidden-text-11"
        class="staffer-wrapper col-12 my-2"
        data-rbd-drag-handle-context-id="2"
        data-rbd-drag-handle-draggable-id="6f23f2f8-10dd-454a-8497-2ba972c980c4"
        data-rbd-draggable-context-id="2"
        data-rbd-draggable-id="6f23f2f8-10dd-454a-8497-2ba972c980c4"
        data-testid="draggable-list-item"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="staffer-image-wrapper overflow-hidden"
        >
          <img
            alt=""
            class="w-25"
            src="/assets/new-80.png"
          />
        </div>
        <div
          class="staffer-details"
        >
          <button
            class="btn js-delete-btn mr-1 p-0"
            type="button"
          >
            <span
              aria-hidden="true"
              class="fa fa-trash fa-fw text-danger"
              id="delete-icon-6f23f2f8-10dd-454a-8497-2ba972c980c4"
            />
            <span
              class="sr-only"
            >
              Remove Waseda
            </span>
          </button>
          <a
            class="btn mr-1 p-0"
            href="/collaborators/6f23f2f8-10dd-454a-8497-2ba972c980c4"
          >
            <span
              aria-hidden="true"
              class="fa fa-edit fa-fw"
              id="edit-icon-6f23f2f8-10dd-454a-8497-2ba972c980c4"
            />
            <span
              class="sr-only"
            >
              Edit Waseda
            </span>
          </a>
          <span
            class="name font-weight-bold"
          >
            Waseda
          </span>
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-2-hidden-text-11"
        class="staffer-wrapper col-12 my-2"
        data-rbd-drag-handle-context-id="2"
        data-rbd-drag-handle-draggable-id="17d0e2c0-9a02-421b-93bf-d081339090cc"
        data-rbd-draggable-context-id="2"
        data-rbd-draggable-id="17d0e2c0-9a02-421b-93bf-d081339090cc"
        data-testid="draggable-list-item"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="staffer-image-wrapper overflow-hidden"
        >
          <img
            alt=""
            class="w-25"
            src="/assets/new-80.png"
          />
        </div>
        <div
          class="staffer-details"
        >
          <button
            class="btn js-delete-btn mr-1 p-0"
            type="button"
          >
            <span
              aria-hidden="true"
              class="fa fa-trash fa-fw text-danger"
              id="delete-icon-17d0e2c0-9a02-421b-93bf-d081339090cc"
            />
            <span
              class="sr-only"
            >
              Remove IBM
            </span>
          </button>
          <a
            class="btn mr-1 p-0"
            href="/collaborators/17d0e2c0-9a02-421b-93bf-d081339090cc"
          >
            <span
              aria-hidden="true"
              class="fa fa-edit fa-fw"
              id="edit-icon-17d0e2c0-9a02-421b-93bf-d081339090cc"
            />
            <span
              class="sr-only"
            >
              Edit IBM
            </span>
          </a>
          <span
            class="name font-weight-bold"
          >
            IBM
          </span>
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-2-hidden-text-11"
        class="staffer-wrapper col-12 my-2"
        data-rbd-drag-handle-context-id="2"
        data-rbd-drag-handle-draggable-id="2aba6189-ad7e-45a8-b269-bea071b80391"
        data-rbd-draggable-context-id="2"
        data-rbd-draggable-id="2aba6189-ad7e-45a8-b269-bea071b80391"
        data-testid="draggable-list-item"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="staffer-image-wrapper overflow-hidden"
        >
          <img
            alt=""
            class="w-25"
            src="/assets/new-80.png"
          />
        </div>
        <div
          class="staffer-details"
        >
          <button
            class="btn js-delete-btn mr-1 p-0"
            type="button"
          >
            <span
              aria-hidden="true"
              class="fa fa-trash fa-fw text-danger"
              id="delete-icon-2aba6189-ad7e-45a8-b269-bea071b80391"
            />
            <span
              class="sr-only"
            >
              Remove Wellesley
            </span>
          </button>
          <a
            class="btn mr-1 p-0"
            href="/collaborators/2aba6189-ad7e-45a8-b269-bea071b80391"
          >
            <span
              aria-hidden="true"
              class="fa fa-edit fa-fw"
              id="edit-icon-2aba6189-ad7e-45a8-b269-bea071b80391"
            />
            <span
              class="sr-only"
            >
              Edit Wellesley
            </span>
          </a>
          <span
            class="name font-weight-bold"
          >
            Wellesley
          </span>
        </div>
      </div>
    </div>
    <label
      class="w-100"
      for="Collaborator-search"
      id="label-Collaborator-search"
    >
      <strong>
        Search or add new Collaborator:
      </strong>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="react-autowhatever-Collaborator-search"
        class="react-autosuggest__container position-relative"
        role="combobox"
      >
        <input
          aria-autocomplete="list"
          aria-controls="react-autowhatever-Collaborator-search"
          autocomplete="off"
          class="form-control"
          placeholder=""
          type="text"
          value=""
        />
        <div
          id="react-autowhatever-Collaborator-search"
          role="listbox"
        />
      </div>
    </label>
  </div>
</div>
`;

exports[`ListField - Collaborators renders correctly with referred props 1`] = `
<div>
  <div
    name="collaborators"
    tabindex="-1"
  >
    <div
      class="staff-list container"
      data-rbd-droppable-context-id="1"
      data-rbd-droppable-id="CollaboratorList"
    >
      <div
        aria-describedby="rbd-hidden-text-1-hidden-text-5"
        class="staffer-wrapper col-12 my-2"
        data-rbd-drag-handle-context-id="1"
        data-rbd-drag-handle-draggable-id="6f23f2f8-10dd-454a-8497-2ba972c980c4"
        data-rbd-draggable-context-id="1"
        data-rbd-draggable-id="6f23f2f8-10dd-454a-8497-2ba972c980c4"
        data-testid="draggable-list-item"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="staffer-image-wrapper overflow-hidden"
        >
          <img
            alt=""
            class="w-25"
            src="/assets/new-80.png"
          />
        </div>
        <div
          class="staffer-details"
        >
          <button
            class="btn js-delete-btn mr-1 p-0"
            type="button"
          >
            <span
              aria-hidden="true"
              class="fa fa-trash fa-fw text-danger"
              id="delete-icon-6f23f2f8-10dd-454a-8497-2ba972c980c4"
            />
            <span
              class="sr-only"
            >
              Remove Waseda
            </span>
          </button>
          <a
            class="btn mr-1 p-0"
            href="/collaborators/6f23f2f8-10dd-454a-8497-2ba972c980c4"
          >
            <span
              aria-hidden="true"
              class="fa fa-edit fa-fw"
              id="edit-icon-6f23f2f8-10dd-454a-8497-2ba972c980c4"
            />
            <span
              class="sr-only"
            >
              Edit Waseda
            </span>
          </a>
          <span
            class="name font-weight-bold"
          >
            Waseda
          </span>
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-1-hidden-text-5"
        class="staffer-wrapper col-12 my-2"
        data-rbd-drag-handle-context-id="1"
        data-rbd-drag-handle-draggable-id="17d0e2c0-9a02-421b-93bf-d081339090cc"
        data-rbd-draggable-context-id="1"
        data-rbd-draggable-id="17d0e2c0-9a02-421b-93bf-d081339090cc"
        data-testid="draggable-list-item"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="staffer-image-wrapper overflow-hidden"
        >
          <img
            alt=""
            class="w-25"
            src="/assets/new-80.png"
          />
        </div>
        <div
          class="staffer-details"
        >
          <button
            class="btn js-delete-btn mr-1 p-0"
            type="button"
          >
            <span
              aria-hidden="true"
              class="fa fa-trash fa-fw text-danger"
              id="delete-icon-17d0e2c0-9a02-421b-93bf-d081339090cc"
            />
            <span
              class="sr-only"
            >
              Remove IBM
            </span>
          </button>
          <a
            class="btn mr-1 p-0"
            href="/collaborators/17d0e2c0-9a02-421b-93bf-d081339090cc"
          >
            <span
              aria-hidden="true"
              class="fa fa-edit fa-fw"
              id="edit-icon-17d0e2c0-9a02-421b-93bf-d081339090cc"
            />
            <span
              class="sr-only"
            >
              Edit IBM
            </span>
          </a>
          <span
            class="name font-weight-bold"
          >
            IBM
          </span>
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-1-hidden-text-5"
        class="staffer-wrapper col-12 my-2"
        data-rbd-drag-handle-context-id="1"
        data-rbd-drag-handle-draggable-id="2aba6189-ad7e-45a8-b269-bea071b80391"
        data-rbd-draggable-context-id="1"
        data-rbd-draggable-id="2aba6189-ad7e-45a8-b269-bea071b80391"
        data-testid="draggable-list-item"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="staffer-image-wrapper overflow-hidden"
        >
          <img
            alt=""
            class="w-25"
            src="/assets/new-80.png"
          />
        </div>
        <div
          class="staffer-details"
        >
          <button
            class="btn js-delete-btn mr-1 p-0"
            type="button"
          >
            <span
              aria-hidden="true"
              class="fa fa-trash fa-fw text-danger"
              id="delete-icon-2aba6189-ad7e-45a8-b269-bea071b80391"
            />
            <span
              class="sr-only"
            >
              Remove Wellesley
            </span>
          </button>
          <a
            class="btn mr-1 p-0"
            href="/collaborators/2aba6189-ad7e-45a8-b269-bea071b80391"
          >
            <span
              aria-hidden="true"
              class="fa fa-edit fa-fw"
              id="edit-icon-2aba6189-ad7e-45a8-b269-bea071b80391"
            />
            <span
              class="sr-only"
            >
              Edit Wellesley
            </span>
          </a>
          <span
            class="name font-weight-bold"
          >
            Wellesley
          </span>
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-1-hidden-text-5"
        class="staffer-wrapper col-12 my-2"
        data-rbd-drag-handle-context-id="1"
        data-rbd-drag-handle-draggable-id="00000000-0000-0000-0000-000000000000"
        data-rbd-draggable-context-id="1"
        data-rbd-draggable-id="00000000-0000-0000-0000-000000000000"
        data-testid="draggable-list-item"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="staffer-image-wrapper overflow-hidden"
        >
          <img
            alt=""
            class="w-25"
            src="/assets/new-80.png"
          />
        </div>
        <div
          class="staffer-details"
        >
          <button
            class="btn js-delete-btn mr-1 p-0"
            type="button"
          >
            <span
              aria-hidden="true"
              class="fa fa-trash fa-fw text-danger"
              id="delete-icon-00000000-0000-0000-0000-000000000000"
            />
            <span
              class="sr-only"
            >
              Remove I am a school
            </span>
          </button>
          <a
            class="btn mr-1 p-0"
            href="/collaborators/00000000-0000-0000-0000-000000000000"
          >
            <span
              aria-hidden="true"
              class="fa fa-edit fa-fw"
              id="edit-icon-00000000-0000-0000-0000-000000000000"
            />
            <span
              class="sr-only"
            >
              Edit I am a school
            </span>
          </a>
          <span
            class="name font-weight-bold"
          >
            I am a school
          </span>
        </div>
      </div>
    </div>
    <label
      class="w-100"
      for="Collaborator-search"
      id="label-Collaborator-search"
    >
      <strong>
        Search or add new Collaborator:
      </strong>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="react-autowhatever-Collaborator-search"
        class="react-autosuggest__container position-relative"
        role="combobox"
      >
        <input
          aria-autocomplete="list"
          aria-controls="react-autowhatever-Collaborator-search"
          autocomplete="off"
          class="form-control"
          placeholder=""
          type="text"
          value=""
        />
        <div
          id="react-autowhatever-Collaborator-search"
          role="listbox"
        />
      </div>
    </label>
  </div>
</div>
`;

exports[`ListField - Staffers renders a list of staff members 1`] = `
<div>
  <div
    tabindex="-1"
  >
    <div
      class="staff-list container"
      data-rbd-droppable-context-id="8"
      data-rbd-droppable-id="staffList"
    >
      <div
        aria-describedby="rbd-hidden-text-8-hidden-text-43"
        class="staffer-wrapper col-12 my-2"
        data-rbd-drag-handle-context-id="8"
        data-rbd-drag-handle-draggable-id="6f23f2f8-10dd-454a-8497-2ba972c980c4"
        data-rbd-draggable-context-id="8"
        data-rbd-draggable-id="6f23f2f8-10dd-454a-8497-2ba972c980c4"
        data-testid="draggable-list-item"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="staffer-image-wrapper overflow-hidden"
        >
          <img
            alt=""
            class="rounded-circle w-25"
            src="/media/people/profile_images/6f23f2f8-10dd-454a-8497-2ba972c980c4-a411afec9477.jpeg"
          />
        </div>
        <div
          class="staffer-details"
        >
          <button
            class="btn js-delete-btn mr-1 p-0"
            type="button"
          >
            <svg
              class="text-gray-500"
              fill="none"
              height="24"
              id="delete-icon-6f23f2f8-10dd-454a-8497-2ba972c980c4"
              screenReaderText="Remove First Last"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 21h12V7H6v14ZM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4Z"
                fill="currentColor"
              />
            </svg>
          </button>
          <a
            class="btn mr-1 p-0"
            href="/instructors/6f23f2f8-10dd-454a-8497-2ba972c980c4"
          >
            <svg
              class="text-gray-500"
              fill="none"
              height="24"
              id="edit-icon-6f23f2f8-10dd-454a-8497-2ba972c980c4"
              screenReaderText="Edit First Last"
              title="Edit"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25ZM21.41 6.34l-3.75-3.75-2.53 2.54 3.75 3.75 2.53-2.54Z"
                fill="currentColor"
              />
            </svg>
          </a>
          <span
            class="name font-weight-bold"
          >
            First Last
          </span>
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-8-hidden-text-43"
        class="staffer-wrapper col-12 my-2"
        data-rbd-drag-handle-context-id="8"
        data-rbd-drag-handle-draggable-id="17d0e2c0-9a02-421b-93bf-d081339090cc"
        data-rbd-draggable-context-id="8"
        data-rbd-draggable-id="17d0e2c0-9a02-421b-93bf-d081339090cc"
        data-testid="draggable-list-item"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="staffer-image-wrapper overflow-hidden"
        >
          <img
            alt=""
            class="rounded-circle w-25"
            src="/media/people/profile_images/17d0e2c0-9a02-421b-93bf-d081339090cc-68912d27b6e7.jpeg"
          />
        </div>
        <div
          class="staffer-details"
        >
          <button
            class="btn js-delete-btn mr-1 p-0"
            type="button"
          >
            <svg
              class="text-gray-500"
              fill="none"
              height="24"
              id="delete-icon-17d0e2c0-9a02-421b-93bf-d081339090cc"
              screenReaderText="Remove Pippa "
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 21h12V7H6v14ZM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4Z"
                fill="currentColor"
              />
            </svg>
          </button>
          <a
            class="btn mr-1 p-0"
            href="/instructors/17d0e2c0-9a02-421b-93bf-d081339090cc"
          >
            <svg
              class="text-gray-500"
              fill="none"
              height="24"
              id="edit-icon-17d0e2c0-9a02-421b-93bf-d081339090cc"
              screenReaderText="Edit Pippa "
              title="Edit"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25ZM21.41 6.34l-3.75-3.75-2.53 2.54 3.75 3.75 2.53-2.54Z"
                fill="currentColor"
              />
            </svg>
          </a>
          <span
            class="name font-weight-bold"
          >
            Pippa 
          </span>
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-8-hidden-text-43"
        class="staffer-wrapper col-12 my-2"
        data-rbd-drag-handle-context-id="8"
        data-rbd-drag-handle-draggable-id="2aba6189-ad7e-45a8-b269-bea071b80391"
        data-rbd-draggable-context-id="8"
        data-rbd-draggable-id="2aba6189-ad7e-45a8-b269-bea071b80391"
        data-testid="draggable-list-item"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="staffer-image-wrapper overflow-hidden"
        >
          <img
            alt=""
            class="rounded-circle w-25"
            src="/media/people/profile_images/2aba6189-ad7e-45a8-b269-bea071b80391-11df6812f839.png"
          />
        </div>
        <div
          class="staffer-details"
        >
          <button
            class="btn js-delete-btn mr-1 p-0"
            type="button"
          >
            <svg
              class="text-gray-500"
              fill="none"
              height="24"
              id="delete-icon-2aba6189-ad7e-45a8-b269-bea071b80391"
              screenReaderText="Remove Dave Grohl"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 21h12V7H6v14ZM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4Z"
                fill="currentColor"
              />
            </svg>
          </button>
          <a
            class="btn mr-1 p-0"
            href="/instructors/2aba6189-ad7e-45a8-b269-bea071b80391"
          >
            <svg
              class="text-gray-500"
              fill="none"
              height="24"
              id="edit-icon-2aba6189-ad7e-45a8-b269-bea071b80391"
              screenReaderText="Edit Dave Grohl"
              title="Edit"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25ZM21.41 6.34l-3.75-3.75-2.53 2.54 3.75 3.75 2.53-2.54Z"
                fill="currentColor"
              />
            </svg>
          </a>
          <span
            class="name font-weight-bold"
          >
            Dave Grohl
          </span>
        </div>
      </div>
    </div>
    <label
      class="w-100"
      for="staff-search"
      id="label-staff-search"
    >
      <strong>
        Search or add new staff:
      </strong>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="react-autowhatever-staff-search"
        class="react-autosuggest__container position-relative"
        role="combobox"
      >
        <input
          aria-autocomplete="list"
          aria-controls="react-autowhatever-staff-search"
          autocomplete="off"
          class="form-control"
          placeholder=""
          type="text"
          value=""
        />
        <div
          id="react-autowhatever-staff-search"
          role="listbox"
        />
      </div>
    </label>
  </div>
</div>
`;

exports[`ListField - Staffers renders correctly with an error after failed submission 1`] = `
<div>
  <div
    tabindex="-1"
  >
    <div
      class="fade alert-content alert alert-danger show"
      role="alert"
    >
      <div
        class="pgn__alert-message-wrapper"
      >
        <div
          class="alert-message-content"
        >
          This field is required
        </div>
      </div>
    </div>
    <div
      class="staff-list container"
      data-rbd-droppable-context-id="10"
      data-rbd-droppable-id="staffList"
    >
      <div
        aria-describedby="rbd-hidden-text-10-hidden-text-54"
        class="staffer-wrapper col-12 my-2"
        data-rbd-drag-handle-context-id="10"
        data-rbd-drag-handle-draggable-id="6f23f2f8-10dd-454a-8497-2ba972c980c4"
        data-rbd-draggable-context-id="10"
        data-rbd-draggable-id="6f23f2f8-10dd-454a-8497-2ba972c980c4"
        data-testid="draggable-list-item"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="staffer-image-wrapper overflow-hidden"
        >
          <img
            alt=""
            class="rounded-circle w-25"
            src="/media/people/profile_images/6f23f2f8-10dd-454a-8497-2ba972c980c4-a411afec9477.jpeg"
          />
        </div>
        <div
          class="staffer-details"
        >
          <button
            class="btn js-delete-btn mr-1 p-0"
            type="button"
          >
            <svg
              class="text-gray-500"
              fill="none"
              height="24"
              id="delete-icon-6f23f2f8-10dd-454a-8497-2ba972c980c4"
              screenReaderText="Remove First Last"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 21h12V7H6v14ZM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4Z"
                fill="currentColor"
              />
            </svg>
          </button>
          <a
            class="btn mr-1 p-0"
            href="/instructors/6f23f2f8-10dd-454a-8497-2ba972c980c4"
          >
            <svg
              class="text-gray-500"
              fill="none"
              height="24"
              id="edit-icon-6f23f2f8-10dd-454a-8497-2ba972c980c4"
              screenReaderText="Edit First Last"
              title="Edit"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25ZM21.41 6.34l-3.75-3.75-2.53 2.54 3.75 3.75 2.53-2.54Z"
                fill="currentColor"
              />
            </svg>
          </a>
          <span
            class="name font-weight-bold"
          >
            First Last
          </span>
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-10-hidden-text-54"
        class="staffer-wrapper col-12 my-2"
        data-rbd-drag-handle-context-id="10"
        data-rbd-drag-handle-draggable-id="17d0e2c0-9a02-421b-93bf-d081339090cc"
        data-rbd-draggable-context-id="10"
        data-rbd-draggable-id="17d0e2c0-9a02-421b-93bf-d081339090cc"
        data-testid="draggable-list-item"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="staffer-image-wrapper overflow-hidden"
        >
          <img
            alt=""
            class="rounded-circle w-25"
            src="/media/people/profile_images/17d0e2c0-9a02-421b-93bf-d081339090cc-68912d27b6e7.jpeg"
          />
        </div>
        <div
          class="staffer-details"
        >
          <button
            class="btn js-delete-btn mr-1 p-0"
            type="button"
          >
            <svg
              class="text-gray-500"
              fill="none"
              height="24"
              id="delete-icon-17d0e2c0-9a02-421b-93bf-d081339090cc"
              screenReaderText="Remove Pippa "
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 21h12V7H6v14ZM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4Z"
                fill="currentColor"
              />
            </svg>
          </button>
          <a
            class="btn mr-1 p-0"
            href="/instructors/17d0e2c0-9a02-421b-93bf-d081339090cc"
          >
            <svg
              class="text-gray-500"
              fill="none"
              height="24"
              id="edit-icon-17d0e2c0-9a02-421b-93bf-d081339090cc"
              screenReaderText="Edit Pippa "
              title="Edit"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25ZM21.41 6.34l-3.75-3.75-2.53 2.54 3.75 3.75 2.53-2.54Z"
                fill="currentColor"
              />
            </svg>
          </a>
          <span
            class="name font-weight-bold"
          >
            Pippa 
          </span>
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-10-hidden-text-54"
        class="staffer-wrapper col-12 my-2"
        data-rbd-drag-handle-context-id="10"
        data-rbd-drag-handle-draggable-id="2aba6189-ad7e-45a8-b269-bea071b80391"
        data-rbd-draggable-context-id="10"
        data-rbd-draggable-id="2aba6189-ad7e-45a8-b269-bea071b80391"
        data-testid="draggable-list-item"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="staffer-image-wrapper overflow-hidden"
        >
          <img
            alt=""
            class="rounded-circle w-25"
            src="/media/people/profile_images/2aba6189-ad7e-45a8-b269-bea071b80391-11df6812f839.png"
          />
        </div>
        <div
          class="staffer-details"
        >
          <button
            class="btn js-delete-btn mr-1 p-0"
            type="button"
          >
            <svg
              class="text-gray-500"
              fill="none"
              height="24"
              id="delete-icon-2aba6189-ad7e-45a8-b269-bea071b80391"
              screenReaderText="Remove Dave Grohl"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 21h12V7H6v14ZM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4Z"
                fill="currentColor"
              />
            </svg>
          </button>
          <a
            class="btn mr-1 p-0"
            href="/instructors/2aba6189-ad7e-45a8-b269-bea071b80391"
          >
            <svg
              class="text-gray-500"
              fill="none"
              height="24"
              id="edit-icon-2aba6189-ad7e-45a8-b269-bea071b80391"
              screenReaderText="Edit Dave Grohl"
              title="Edit"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25ZM21.41 6.34l-3.75-3.75-2.53 2.54 3.75 3.75 2.53-2.54Z"
                fill="currentColor"
              />
            </svg>
          </a>
          <span
            class="name font-weight-bold"
          >
            Dave Grohl
          </span>
        </div>
      </div>
    </div>
    <label
      class="w-100"
      for="staff-search"
      id="label-staff-search"
    >
      <strong>
        Search or add new staff:
      </strong>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="react-autowhatever-staff-search"
        class="react-autosuggest__container position-relative"
        role="combobox"
      >
        <input
          aria-autocomplete="list"
          aria-controls="react-autowhatever-staff-search"
          autocomplete="off"
          class="form-control"
          placeholder=""
          type="text"
          value=""
        />
        <div
          id="react-autowhatever-staff-search"
          role="listbox"
        />
      </div>
    </label>
  </div>
</div>
`;

exports[`ListField - Staffers renders correctly with referred props 1`] = `
<div>
  <div
    tabindex="-1"
  >
    <div
      class="staff-list container"
      data-rbd-droppable-context-id="9"
      data-rbd-droppable-id="staffList"
    >
      <div
        aria-describedby="rbd-hidden-text-9-hidden-text-48"
        class="staffer-wrapper col-12 my-2"
        data-rbd-drag-handle-context-id="9"
        data-rbd-drag-handle-draggable-id="6f23f2f8-10dd-454a-8497-2ba972c980c4"
        data-rbd-draggable-context-id="9"
        data-rbd-draggable-id="6f23f2f8-10dd-454a-8497-2ba972c980c4"
        data-testid="draggable-list-item"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="staffer-image-wrapper overflow-hidden"
        >
          <img
            alt=""
            class="rounded-circle w-25"
            src="/media/people/profile_images/6f23f2f8-10dd-454a-8497-2ba972c980c4-a411afec9477.jpeg"
          />
        </div>
        <div
          class="staffer-details"
        >
          <button
            class="btn js-delete-btn mr-1 p-0"
            type="button"
          >
            <svg
              class="text-gray-500"
              fill="none"
              height="24"
              id="delete-icon-6f23f2f8-10dd-454a-8497-2ba972c980c4"
              screenReaderText="Remove First Last"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 21h12V7H6v14ZM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4Z"
                fill="currentColor"
              />
            </svg>
          </button>
          <a
            class="btn mr-1 p-0"
            href="/instructors/6f23f2f8-10dd-454a-8497-2ba972c980c4"
          >
            <svg
              class="text-gray-500"
              fill="none"
              height="24"
              id="edit-icon-6f23f2f8-10dd-454a-8497-2ba972c980c4"
              screenReaderText="Edit First Last"
              title="Edit"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25ZM21.41 6.34l-3.75-3.75-2.53 2.54 3.75 3.75 2.53-2.54Z"
                fill="currentColor"
              />
            </svg>
          </a>
          <span
            class="name font-weight-bold"
          >
            First Last
          </span>
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-9-hidden-text-48"
        class="staffer-wrapper col-12 my-2"
        data-rbd-drag-handle-context-id="9"
        data-rbd-drag-handle-draggable-id="17d0e2c0-9a02-421b-93bf-d081339090cc"
        data-rbd-draggable-context-id="9"
        data-rbd-draggable-id="17d0e2c0-9a02-421b-93bf-d081339090cc"
        data-testid="draggable-list-item"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="staffer-image-wrapper overflow-hidden"
        >
          <img
            alt=""
            class="rounded-circle w-25"
            src="/media/people/profile_images/17d0e2c0-9a02-421b-93bf-d081339090cc-68912d27b6e7.jpeg"
          />
        </div>
        <div
          class="staffer-details"
        >
          <button
            class="btn js-delete-btn mr-1 p-0"
            type="button"
          >
            <svg
              class="text-gray-500"
              fill="none"
              height="24"
              id="delete-icon-17d0e2c0-9a02-421b-93bf-d081339090cc"
              screenReaderText="Remove Pippa "
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 21h12V7H6v14ZM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4Z"
                fill="currentColor"
              />
            </svg>
          </button>
          <a
            class="btn mr-1 p-0"
            href="/instructors/17d0e2c0-9a02-421b-93bf-d081339090cc"
          >
            <svg
              class="text-gray-500"
              fill="none"
              height="24"
              id="edit-icon-17d0e2c0-9a02-421b-93bf-d081339090cc"
              screenReaderText="Edit Pippa "
              title="Edit"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25ZM21.41 6.34l-3.75-3.75-2.53 2.54 3.75 3.75 2.53-2.54Z"
                fill="currentColor"
              />
            </svg>
          </a>
          <span
            class="name font-weight-bold"
          >
            Pippa 
          </span>
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-9-hidden-text-48"
        class="staffer-wrapper col-12 my-2"
        data-rbd-drag-handle-context-id="9"
        data-rbd-drag-handle-draggable-id="2aba6189-ad7e-45a8-b269-bea071b80391"
        data-rbd-draggable-context-id="9"
        data-rbd-draggable-id="2aba6189-ad7e-45a8-b269-bea071b80391"
        data-testid="draggable-list-item"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="staffer-image-wrapper overflow-hidden"
        >
          <img
            alt=""
            class="rounded-circle w-25"
            src="/media/people/profile_images/2aba6189-ad7e-45a8-b269-bea071b80391-11df6812f839.png"
          />
        </div>
        <div
          class="staffer-details"
        >
          <button
            class="btn js-delete-btn mr-1 p-0"
            type="button"
          >
            <svg
              class="text-gray-500"
              fill="none"
              height="24"
              id="delete-icon-2aba6189-ad7e-45a8-b269-bea071b80391"
              screenReaderText="Remove Dave Grohl"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 21h12V7H6v14ZM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4Z"
                fill="currentColor"
              />
            </svg>
          </button>
          <a
            class="btn mr-1 p-0"
            href="/instructors/2aba6189-ad7e-45a8-b269-bea071b80391"
          >
            <svg
              class="text-gray-500"
              fill="none"
              height="24"
              id="edit-icon-2aba6189-ad7e-45a8-b269-bea071b80391"
              screenReaderText="Edit Dave Grohl"
              title="Edit"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25ZM21.41 6.34l-3.75-3.75-2.53 2.54 3.75 3.75 2.53-2.54Z"
                fill="currentColor"
              />
            </svg>
          </a>
          <span
            class="name font-weight-bold"
          >
            Dave Grohl
          </span>
        </div>
      </div>
      <div
        aria-describedby="rbd-hidden-text-9-hidden-text-48"
        class="staffer-wrapper col-12 my-2"
        data-rbd-drag-handle-context-id="9"
        data-rbd-drag-handle-draggable-id="00000000-0000-0000-0000-000000000000"
        data-rbd-draggable-context-id="9"
        data-rbd-draggable-id="00000000-0000-0000-0000-000000000000"
        data-testid="draggable-list-item"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="staffer-image-wrapper overflow-hidden"
        >
          <img
            alt=""
            class="rounded-circle w-25"
            src="/assets/pic.png"
          />
        </div>
        <div
          class="staffer-details"
        >
          <button
            class="btn js-delete-btn mr-1 p-0"
            type="button"
          >
            <svg
              class="text-gray-500"
              fill="none"
              height="24"
              id="delete-icon-00000000-0000-0000-0000-000000000000"
              screenReaderText="Remove Person McPerson"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 21h12V7H6v14ZM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4Z"
                fill="currentColor"
              />
            </svg>
          </button>
          <a
            class="btn mr-1 p-0"
            href="/instructors/00000000-0000-0000-0000-000000000000"
          >
            <svg
              class="text-gray-500"
              fill="none"
              height="24"
              id="edit-icon-00000000-0000-0000-0000-000000000000"
              screenReaderText="Edit Person McPerson"
              title="Edit"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25ZM21.41 6.34l-3.75-3.75-2.53 2.54 3.75 3.75 2.53-2.54Z"
                fill="currentColor"
              />
            </svg>
          </a>
          <span
            class="name font-weight-bold"
          >
            Person McPerson
          </span>
        </div>
      </div>
    </div>
    <label
      class="w-100"
      for="staff-search"
      id="label-staff-search"
    >
      <strong>
        Search or add new staff:
      </strong>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="react-autowhatever-staff-search"
        class="react-autosuggest__container position-relative"
        role="combobox"
      >
        <input
          aria-autocomplete="list"
          aria-controls="react-autowhatever-staff-search"
          autocomplete="off"
          class="form-control"
          placeholder=""
          type="text"
          value=""
        />
        <div
          id="react-autowhatever-staff-search"
          role="listbox"
        />
      </div>
    </label>
  </div>
</div>
`;
